# AoC-2022

./: .gitignore  Cargo.toml  README.md
divers/: .gitignore  README.md  standalone.cpp  standalone.f90  standalone.py  standalone.rs  standalone_day01.cpp  standalone_day02.cpp  standalone_day03.cpp  standalone_day04.cpp  standalone_day05.cpp
src/: day01.rs  day02.rs  day03.rs  day04.rs  day05.rs  day06.rs  day07.rs  day08.rs  day09.rs  main.rs  test_helper.rs  utils.rs
src/days/: day03.rs  day06.rs  day10.rs  day11.rs  day12.rs  day13.rs  day14.rs  day15.rs  day16.rs  day17.rs  day18.rs  mod.rs
