[package]
name = "aoc-2022"
version = "0.1.0"
edition = "2021"
authors = ["edmbernard <bernard.erwan@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.22", features = ["derive"] }
itertools = "0.10.5"
paste = "1.0.9"
regex = "1.6.0"

[profile.release]
debug = true
